--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     command: >
       bash -c
-      "python3 manage.py runserver 8000"
+      "python3 manage.py runserver"
     volumes:
       - .:/code
       - static-volume:/code/static
