--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     command: >
       bash -c
-      "python3 manage.py runserver"
+      "gunicorn -w4 -b 0.0.0.0:8000 --log-level=debug --access-logfile error.log manage:app"
     volumes:
       - .:/code
       - static-volume:/code/static
@@ -51,3 +51,5 @@ networks:
 
 volumes:
   static-volume:
+    - ./application/static
+    - ./application/templates
