--- a/config.yaml
+++ b/config.yaml
@@ -10,4 +10,4 @@ jwt:
   SECRET: foo
   EXPIRE_HOURS: 24
 db:
-  MYSQL: mysql+pymysql://thss:H0lc2FaAm30zV9r2@bj-cdb-jh34xs8y.sql.tencentcdb.com:62554/simplebbs?charset=utf8mb4
+  MYSQL: mysql+pymysql://root:2018010717@localhost:3306/thss?charset=utf8mb4
