--- a/config.yaml
+++ b/config.yaml
@@ -10,4 +10,4 @@ jwt:
   SECRET: foo
   EXPIRE_HOURS: 24
 db:
-  MYSQL: mysql+pymysql://root:2018010717@localhost:3306/thss?charset=utf8mb4
+  MYSQL: mysql+pymysql://root:2018010717@mysql:3306/thss?charset=utf8mb4
