--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,10 @@ services:
   mysql:
     image: mysql:5.7
     volumes:
-      - "/home/ubuntu/mysql:/var/lib/mysql"
-    ports:
-      - "3306:3306"
+      - /home/ubuntu/mysql:/var/lib/mysql
+      - ./init/mysql/init:/docker-entrypoint-initdb.d
+    expose:
+      - "3306"
     restart: always
     environment:
       - MYSQL_ROOT_PASSWORD=2018010717
