--- a/config/nginx/default.conf
+++ b/config/nginx/default.conf
@@ -4,8 +4,10 @@ server {
   
   # 静态文件服务
   location /static/ {
-    autoindex on;
     alias /code/static/;
+  }
+  location /templates/ {
+    alias /code/templates/;
   }
   
   # 代理
