--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
+      - ./application/templates:/code/templates
       - ./application/static:/code/static
       - ./config/nginx:/etc/nginx/conf.d
     depends_on:
